@@ -128,7 +128,7 @@ module ActiveMerchant #:nodoc:
       def add_address(xml, tag, address, options)  
         return if address.nil?
         xml.tag! tag do
-          xml.tag! 'Name', address[:name] unless options[:name].blank?
+          xml.tag! 'Name', address[:name]
           xml.tag! 'EMail', options[:email] unless options[:email].blank?
           xml.tag! 'Phone', address[:phone] unless address[:phone].blank?
           xml.tag! 'CustCode', options[:customer] if !options[:customer].blank? && tag == 'BillTo'
